- gurpmi2:
  o like urpmi/rpmdrake/drakx, display all errors at once at end
    instead of forcing users to click in order to continue
    transactions (mga#6086)
  o do not popup errors at end in auto mode

Version 7.26 - 2 May 2013, by Thierry Vignaud

- gurpmi2:
  o sort package list
- library:
  o fix displaying removed package name in gurpmi/rpmdrake (mga#9545)

Version 7.25 - 21 April 2013, by Thierry Vignaud

- library:
  o enable rpmdrake to not use modal dialogs (mga#9646)
  o fix leaving read locks on rpmdb (mga#9248)

Version 7.24 - 18 April 2013, by Thierry Vignaud

- library:
  o display exceptions that happened while downloading (mga#9529)
- urpmi:
  o fix package count when a package has a %pretrans scriptlet

Version 7.23 - 21 March 2013, by Thierry Vignaud

- library:
  o enable to report packages signature checking in global progress bar dialog
- gurpmi2:
  o improved layout:
    * only the package list needs a scrolling bar
    * always display space information
  o display the addionnal space that will be used and the amount of downloaded
    packages instead of the total size of the packages (like urpmi)
  o fix return value (mga#9519)
  o report packages signature checking in global progress bar dialog

Version 7.22 - 21 March 2013, by Thierry Vignaud

- library:
  o account for packages to erase in gurpm progress bar
  o enable to have a cancel button in global progress bar dialog
- gurpmi2:
  o enable to cancel downloads
  o fix setting download callback

Version 7.21 - 21 March 2013, by Thierry Vignaud

- library:
  o restore main_window when global progress bar dialog is deleted

Version 7.20 - 19 March 2013, by Thierry Vignaud

- library:
  o drop 'callback_report_uninst' now that 'callback_uninst' enables to get
    erasure progress
  o enable rpmdrake/gurpm/drakx to pass their own callbacks for erasure
    progress & errors
  o enhanced doc
  o revert 'fixing (g)urpmi --auto-select --update defaulting to all media when