@@ -3,6 +3,8 @@
     instead of forcing users to click in order to continue
     transactions (mga#6086)
   o do not popup errors at end in auto mode
+- library (mga#8368, #8379 & #9758):
+  o enable to see if nonfree/tainted packages are installed
 
 Version 7.26 - 2 May 2013, by Thierry Vignaud
 
